--- a/sass/scsssecundarios/_variables.scss
+++ b/sass/scsssecundarios/_variables.scss
@@ -1,4 +1,13 @@
 $color-principal: #4c023b;
 $color-secundario: #6e006e;
-$color-terciario:#940466;
+$color-terciario: #940466;
 
+$font-size-desktop: 16px;
+$font-size-tablet: 14px;
+$font-size-mobile: 12px;
+
+$padding-desktop: 20px;
+$padding-tablet: 15px;
+$padding-mobile: 10px;
+
+$font-family: 'Roboto', sans-serif;
